--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Alireza Sahebi | Blog
+title: Alireza Sahebi | Thoughts
 email: alireza.sahebi7@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Alireza's Thoughts
